# container_system

./: .clang-tidy  .cppcheck  .gitignore  ARCHITECTURE.md  BASELINE.md  CHANGELOG.md  CHANGELOG_KO.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DOC_REVIEW_REPORT.md  Doxyfile  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_PLAN.md  LICENSE-THIRD-PARTY  PERFORMANCE.md  PERFORMANCE_KO.md  README.kr.md  README.md  README_8md.html  README_KO.md  SANITIZER_TEST_RESULTS.md  SCOPE.md  SECURITY.md  advanced__container__example_8cpp.html  advanced__container__example_8cpp.js  advanced__container__example_8cpp__incl.map  advanced__container__example_8cpp__incl.md5  advanced__container__example_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.map  advanced__container__example_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.md5  advanced__container__example_8cpp_source.html  advanced_container_example_8cpp-example.html  annotated.html  annotated_dup.js  asio__integration__example_8cpp.html  asio__integration__example_8cpp.js  asio__integration__example_8cpp__incl.map  asio__integration__example_8cpp__incl.md5  asio__integration__example_8cpp_a1156846072709ab6e482082b43aae398_icgraph.map  (+1301 more)
.github/: RELEASE_TEMPLATE.md
.github-workflows-template/: README.md  install.sh  memory-pool-benchmarks.yml
benchmarks/: BASELINE.md  CMakeLists.txt  README.md  container_operations_bench.cpp  epoch_manager_bench.cpp  main_bench.cpp  memory_efficiency_bench.cpp  rcu_value_bench.cpp  serialization_bench.cpp  thread_scalability_bench.cpp  value_operations_bench.cpp
benchmarks/baselines/: baseline_20251126_135633.json  baseline_20251209_082500.json  baseline_20251222_071653.json  baseline_20251227_025550.json  baseline_20251227_140149.json  baseline_20251227_141958.json  baseline_20251228_102707.json  baseline_20251228_104519.json  baseline_20251230_175541.json  baseline_20251231_001051.json  baseline_20251231_004355.json  baseline_20251231_012846.json  baseline_20260102_100938.json  baseline_20260103_045609.json  baseline_20260109_193238.json  baseline_20260110_023329.json  baseline_20260110_032952.json  baseline_20260110_035555.json  baseline_20260110_041927.json  baseline_20260110_053041.json  baseline_20260110_074814.json  baseline_20260110_085354.json  baseline_20260110_095130.json  baseline_20260110_112333.json  baseline_20260110_133633.json  baseline_20260110_144605.json  baseline_20260110_152147.json  baseline_20260110_153640.json  baseline_20260110_161708.json  baseline_20260110_163546.json  baseline_20260110_173645.json  baseline_20260110_223145.json  baseline_20260116_124503.json  baseline_20260116_132419.json  baseline_20260116_140430.json  baseline_20260116_143640.json  baseline_20260116_150201.json  baseline_20260118_041221.json  baseline_20260118_043225.json  baseline_20260118_045054.json  (+29 more)
cmake/: ContainerSystemConfig.cmake.in  README.md  UnifiedDependencies.cmake  Version.cmake  container_system-config.cmake.in  toolchain-arm64-linux.cmake
core/: concepts.h  container.cpp  container.h  container_memory_pool.h  container_schema.cpp  deprecation.h  optimized_container.h  optimized_value.h  policy_container.h  simd_batch.h  storage_policy.h  typed_container.h  value.cpp  value.h  value_pool.h  value_store.cpp  value_store.h  value_types.cpp  value_types.h
docs/: API_QUICK_REFERENCE.md  API_REFERENCE.kr.md  API_REFERENCE.md  API_REFERENCE_KO.md  ARCHITECTURE.kr.md  ARCHITECTURE.md  ARCHITECTURE_ISSUES.md  ARCHITECTURE_ISSUES_KO.md  ARCHITECTURE_KO.md  ARRAY_VALUE_GUIDE.md  ASYNC_GUIDE.md  AUTOMATED_PERFORMANCE_TRACKING.md  BASELINE.md  BASELINE_KO.md  BENCHMARKS.kr.md  BENCHMARKS.md  BENCHMARKS_KO.md  CHANGELOG.kr.md  CHANGELOG.md  CHANGELOG_KO.md  CURRENT_STATE.md  CURRENT_STATE_KO.md  DOMAIN_SEPARATION_GUIDE.md  ECOSYSTEM.md  EXCEPTION_SAFETY.md  FEATURES.kr.md  FEATURES.md  FEATURES_KO.md  GETTING_STARTED.md  GRPC_ADAPTER_IMPLEMENTATION_KO.md  GRPC_INTEGRATION_PROPOSAL.md  GRPC_INTEGRATION_PROPOSAL_KO.md  GRPC_MINIMAL_INTEGRATION_PLAN.md  GRPC_MINIMAL_INTEGRATION_PLAN_KO.md  GRPC_PROJECT_PLAN.md  GRPC_PROJECT_PLAN_KO.md  IMPLEMENTATION_SUMMARY_KO.md  IMPROVEMENTS_KO.md  MEMORY_POOL_REVIEW.md  MEMORY_POOL_REVIEW_KO.md  (+29 more)
examples/: CMakeLists.txt  README.md  advanced_container_example.cpp  asio_integration_example.cpp  async_coroutine_example.cpp  basic_container_example.cpp  error_handling_example.cpp  iterator_example.cpp  messaging_integration_example.cpp  policy_container_example.cpp  real_world_scenarios.cpp  schema_validation_example.cpp  serialization_formats_example.cpp  simd_batch_example.cpp  thread_safe_rcu_example.cpp  value_store_example.cpp
fuzz/: CMakeLists.txt  fuzz_container_deserialize.cpp  fuzz_deserialize.cpp  generate_corpus.py
grpc/: CMakeLists.txt  README.md
grpc/adapters/: container_adapter.cpp  container_adapter.h  value_mapper.h
grpc/client/: grpc_client.cpp  grpc_client.h
grpc/examples/: client_example.cpp  server_example.cpp
grpc/proto/: container_service.proto
grpc/server/: grpc_server.cpp  grpc_server.h  service_impl.cpp  service_impl.h
grpc/tests/: adapter_test.cpp  service_test.cpp
integration/: messaging_integration.cpp  messaging_integration.h  value_bridge.cpp  value_bridge.h
integration_tests/: CMakeLists.txt  README.md  SESSION_SUMMARY.md
integration_tests/failures/: error_handling_test.cpp
integration_tests/framework/: system_fixture.h  test_config.h  test_environment_validation.cpp  test_helpers.h
integration_tests/performance/: serialization_performance_test.cpp
integration_tests/scenarios/: container_lifecycle_test.cpp  value_operations_test.cpp
internal/: epoch_manager.h  memory_pool.h  pool_allocator.h  pool_allocator_adapter.h  rcu_value.h  simd_policies.h  simd_processor.cpp  simd_processor.h  thread_safe_container.cpp  thread_safe_container.h  value.cpp  value.h  value_view.h  variant_value.cpp  variant_value.h  variant_value_factory.h  variant_value_v2.cpp  variant_value_v2.h
messaging/: message_container.cpp  message_container.h
samples/: CMakeLists.txt  README.md  basic_usage.cpp  (+2 more)
scripts/: build.sh  (+3 more)
(+3236 files in other folders)
